# src/main/java/org/app/inventory/config/exception/GlobalExceptionHandler.java
@@ -1,0 +1,17 @@
+package org.app.inventory.config.exception;
+
+import org.openapitools.model.ExceptionResponse;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+
+@ControllerAdvice
+public class GlobalExceptionHandler {
+  @ExceptionHandler(NotFoundException.class)
+  public ResponseEntity<ExceptionResponse> handleNotFoundException(NotFoundException ex) {
+    ExceptionResponse exceptionResponse = new ExceptionResponse();
+    exceptionResponse.setError(ex.getMessage());
+    return new ResponseEntity<>(exceptionResponse, HttpStatus.NOT_FOUND);
+  }
+}
